--- a/config.json
+++ b/config.json
@@ -103,7 +103,7 @@
           1002,
           4010
         ],
-        "welcomeMessage": "Welcome To Private Server, Discord Support: Shyr#2006",
+        "welcomeMessage": "Welcome To Private Server",
         "welcomeMail": {
           "title": "Nahida Seggg For You!",
           "content": "",
